tester/testsuite/extensions/structs/bad/bad001.jl
/* redefinition of variable */

struct Point {
	int x;
	int x;
}

int main() {
	return 1;
}
